Added @Value annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ############# Database Properties ###########################################
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialize=true
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
