--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone?allowPubli
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+################## Application URL ###############
+app.url=http://localhost:8080
